source/main.scss
/* ... */
.width-full,
.expanding-width {
    width: 100%;
}

.height-full,
.expanding-height {
    height: 100%;
}

.contracting-width {
    width: 0;
}

.contracting-height {
    height: 0;
}

/* Scrolling */

@each $overflow in $overflows {

    .horizontal-overflow-#{$overflow} {
        overflow-x: $overflow;
    }

    .vertical-overflow-#{$overflow} {
        overflow-y: $overflow;
    }

}

.vertical-scroll-container {
    @extend .card;
    height: 0;
    flex-grow: 1;
    overflow-y: scroll;
}

/* Responsive */

@each $size in $sizes {

    .shown-under-#{$size}-width {
        display: none;
    }

    .shown-over-#{$size}-width {
        display: none;
    }

    @if map.get($widths, $size) !=null {

        @media only screen and (max-width: map.get($widths, $size)) {
            .to-column-under-#{$size}-width {
                flex-flow: column nowrap;
            }

            .to-row-under-#{$size}-width {
                flex-flow: row wrap;
            }

            .to-rack-under-#{$size}-width {
                flex-flow: row nowrap;
            }

            @each $alignment in $alignments {
                .align-#{$alignment}-under-#{$size}-width {
                    align-items: $alignment;
                }
            }

            @each $justification in $justifications {
                .justify-#{$justification}-under-#{$size}-width {
                    justify-content: $justification;
                }
            }

            .no-scroll-under-#{$size}-width {
                overflow-y: unset;
                min-height: auto;
                height: auto;
            }

            .hidden-under-#{$size}-width {
                display: none;
            }

            .shown-under-#{$size}-width {
                display: block;
            }
        }

        @media only screen and (min-width: map.get($widths, $size)) {
            .to-column-over-#{$size}-width {
                flex-flow: column nowrap;
            }

            .to-row-over-#{$size}-width {
                flex-flow: row wrap;
            }

            .to-rack-over-#{$size}-width {
                flex-flow: row nowrap;
            }

            @each $alignment in $alignments {
                .align-#{$alignment}-over-#{$size}-width {
                    align-items: $alignment;
                }
            }

            @each $justification in $justifications {
                .justify-#{$justification}-over-#{$size}-width {
                    justify-content: $justification;
                }
            }

            .no-scroll-over-#{$size}-width {
                overflow-y: unset;
                min-height: auto;
                height: auto;
            }

            .hidden-over-#{$size}-width {
                display: none;
            }

            .shown-over-#{$size}-width {
                display: block;
            }
        }

    }

}

/* Aesthetic */

.card {
    padding: var(--space-medium);
    border-radius: var(--border-radius);
    background-color: var(--color-page);
}

.card .card {
    border: var(--border);
}

@each $text-alignment in $text-alignments {

    .text-align-#{$text-alignment} {
        text-align: $text-alignment;
    }

}

.border {
    border: var(--border);
}

.border-none {
    border: none;
}

.border-radius {
    border-radius: var(--border-radius);
}

.border-radius-circle {
    border-radius: 50%;
}

/* Cursors */

@each $cursor in $cursors {

    .cursor-#{$cursor} {
        cursor: #{$cursor};
    }

}

/* Colors */

@each $color in $colors {

    .background-#{$color} {
        background-color: var(--#{$color});
    }

    .foreground-#{$color} {
        color: var(--#{$color});
    }

    .border-#{$color} {
        border-color: var(--#{$color});
    }

    .fill-#{$color} path {
        fill: var(--#{$color});
    }

}

@each $font-style in $font-styles {

    .font-style-#{$font-style} {
        font-style: $font-style;
    }

}

.text-decoration-none {
    text-decoration: none;
}

.text-decoration-underline {
    text-decoration: underline;
}

.text-decoration-overline {
    text-decoration: overline;
}

.text-decoration-error {
    text-decoration: underline wavy var(--color-negative);
}

/* Inputs */

input,
select,
textarea,
button {
    height: calc(var(--space-large)* 2);
    line-height: 1;
    padding: var(--space-small);
    background-color: var(--color-input);
    color: var(--color-input-text);
    border: none;
    font-family: var(--font-family-regular);
    border-radius: var(--border-radius);
    transition-delay: 0ms;
    transition-duration: var(--hover-transition-duration);
    transition-property: background-color;
    transition-timing-function: ease;
    outline: none;
}

input:focus,
select:focus,
textarea:focus {
    background-color: var(--color-input-special);
}

input:disabled,
select:disabled,
textarea:disabled,
button:disabled {
    cursor: not-allowed;
    opacity: 0.75;
}

input[type=button],
input[type=reset],
input[type=submit],
button,
input[type=range]::-webkit-slider-thumb {
    @extend .rack;
    @extend .align-center;
    @extend .justify-center;
    background-color: var(--color-accent);
    color: var(--color-input-text-special);
    border: none;
    font-family: var(--font-family-regular);
    border-radius: var(--border-radius);
    font-weight: var(--font-weight-larger);
    cursor: pointer;
}

input[type=button]:not(:disabled):hover,
input[type=reset]:not(:disabled):hover,
input[type=submit]:not(:disabled):hover,
input[type=color]:not(:disabled):hover,
input[type=color]:not(:disabled):focus,
button:not(:disabled):hover,
input::-webkit-file-upload-button:not(:disabled):hover,
input::-webkit-file-upload-button:not(:disabled):hover,
input[type=range]::-webkit-slider-thumb:not(:disabled):hover {
    background-color: var(--color-accent-special);
}

input[type=checkbox],
input[type=radio] {
    width: var(--space-larger);
    height: var(--space-larger);
}
/* ... */

